# SincroPro

./: .gitignore  CMakeLists.txt  README.md  mock_api_server.py
API/Fabes/: .gitkeep
API/MySonda-GO/: desinstalar_demonio_autostart.bat  go.mod  go.sum  instalar_demonio_autostart.bat  main.go  run_go_apis.bat
src/core/: APIConnector.cpp  APIConnector.hpp  DatabaseConnector.hpp  HttpClient.cpp  HttpClient.hpp  IdTracker.cpp  IdTracker.hpp  ODBCConnector.cpp  ODBCConnector.hpp  SyncEngine.cpp  SyncEngine.hpp
src/gui/: gui_main.cpp
